# Laugh-Score-Analysis

./: Dockerfile  README.md  main.py  pyproject.toml
src/: analyzer.py  config.py  video_utils.py
